# Hume

./: .env  .env.examples  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
Hume/: users.csv
Hume/administration/: forms.py  urls.py  views.py
Hume/api/: serializers.py  urls.py  views.py
Hume/authorization/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
Hume/authorization/migrations/: 0001_initial.py  0002_alter_account_email.py
Hume/common/: models.py  views.py
Hume/config/: settings.py  urls.py
Hume/static-cdn/scss/: _site-blocks.scss
Hume/static/css/: style.css
Hume/static/geojson/: dd.geojson  district.geojson  e.geojson  ffr.geojson
Hume/templates/: about.html  admin_accounts.html  admin_base.html  admin_data.html  admin_index.html  admin_login.html  admin_readings.html  admin_things.html  adminmap.html  base.html  collector_account.html  contact.html  elements.html  gallery.html  index.html  liveweather.html  login.html  map.html  news.html  rain.html  register.html  staff.html  temperature.html  tt.html  user_account.html
Hume/things/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
Hume/things/migrations/: 0001_initial.py  0002_things_location.py  0003_rename_freading_till_thingsreadings_reading_till.py  0004_alter_thingsreadings_reading_till.py  0005_thingsreadings_soil_humidity_reading_and_more.py  (+4 more)
authorization/: urls.py  views.py
config/: settings.py
nginx/: nginx.conf
templates/: about.html  contact.html  elements.html  index.html  login.html  staff.html
(+6 files in other folders)
